--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -15,7 +15,7 @@
       {% endfor %}
       <!-- Login form -->
       {{wtf.quick_form(login_form)}}
-      <p>No account? <a href="{{url_for('auth.register')}}">Sign up</a></p>
+      <p>No account? <a href="{{url_for('auth.register')}}">create account</a></p>
      </div>
      <div clas="col-md-2"> </div>
     </div>
