--- a/app/templates/fourOfour.html
+++ b/app/templates/fourOfour.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 <h1>404 Error</h1>
-<p class="zoom-area"><b>Hi</b> OOPS! PAGE NOT FOUND </p>
+<p class="zoom-area"> OOPS! PAGE NOT FOUND </p>
 <div class="link-container">
     <a href="#" class="more-link" [routerLink]="['/']" routerLinkActive="router-link-active" >Home</a>
 </div>
