--- a/app/static/main.css
+++ b/app/static/main.css
@@ -79,6 +79,7 @@
     height: 70px;
     left: 43px;
     bottom: 43px;
+    background: #FDFAF5;
     box-shadow: -2px 2px 2px 0px rgba(0, 0, 0, 0.1);
 }
 
@@ -110,9 +111,13 @@
     box-sizing: border-box;
 }
 body {
+    background-color: #FDFAF5;
     margin-bottom: 50px;
 }
-
+html, button, input, select, textarea {
+    font-family: 'Montserrat', Helvetica, sans-serif;
+    color: #bbb;
+}
 h1 {
     text-align: center;
     margin: 30px 15px;
@@ -129,8 +134,10 @@ h1 {
 a.more-link {
     text-transform: uppercase;
     font-size: 13px;
+    background-color: #de7e85;
     padding: 10px 15px;
     border-radius: 0;
+    color: #fff;
     display: inline-block;
     margin-right: 5px;
     margin-bottom: 5px;
