--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-horizontal navbar-expand-lg navbar-dark bg-info fixed-top">
     <div class="container">
-        <a class="navbar-brand" href="/">Pitch your Pitches</a>
+        <a class="navbar-brand" href="/">Pitch Perfect</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-info" aria-controls="navbar-info" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -33,7 +33,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link nav-link-icon" href="{{url_for('main.new_pitch', uname=current_user.username)}}">
-                        <span class="nav-link-inner--text">Your Pitch</span>
+                        <span class="nav-link-inner--text">Add pitch</span>
                     </a>
                 </li>
                 <li class="nav-item">
