--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -10,13 +10,12 @@
                     <img src="{{url_for('static',filename=user.profile_pic_path)}}" alt=""/>
                     {%else%}
 
-                    <p>No profile picture</p>
 
                     {% endif %}
 
                     {% if user == current_user %}
                     <div class="file btn btn-lg btn-primary">
-                        Change Photo
+                        upload Image
                         <form action="{{url_for('main.update_pic',uname=user.username)}}" method="post"
                             enctype="multipart/form-data">
 
@@ -89,12 +88,16 @@
 
 
 <style>
+    body{
+    background-color: gray;
    
+}
     .emp-profile{
     padding: 3%;
     margin-top: 10em;
     margin-bottom: 3%;
     border-radius: 0.5rem;
+    background: #fff;
 }
 .profile-img{
     text-align: center;
@@ -119,21 +122,28 @@
     right: 0;
     top: 0;
 }
-
+.profile-head h5{
+    color: #333;
+}
+.profile-head h6{
+    color: #0062cc;
+}
 .profile-edit-btn{
     border: none;
     border-radius: 1.5rem;
     width: 70%;
     padding: 2%;
     font-weight: 600;
-   
+    color: #6c757d;
     cursor: pointer;
 }
 .proile-rating{
     font-size: 12px;
+    color: #818182;
     margin-top: 5%;
 }
 .proile-rating span{
+    color: #495057;
     font-size: 15px;
     font-weight: 600;
 }
@@ -144,18 +154,23 @@
     font-weight:600;
     border: none;
 }
-
+.profile-head .nav-tabs .nav-link.active{
+    border: none;
+    border-bottom:2px solid #0062cc;
+}
 .profile-work{
     padding: 14%;
     margin-top: -15%;
 }
 .profile-work p{
     font-size: 12px;
+    color: #818182;
     font-weight: 600;
     margin-top: 10%;
 }
 .profile-work a{
     text-decoration: none;
+    color: #495057;
     font-weight: 600;
     font-size: 14px;
 }
@@ -167,6 +182,8 @@
 }
 .profile-tab p{
     font-weight: 600;
+    color: #0062cc;
 }
+</style>
 </style>
 {% endblock %}
