--- a/app/templates/profile/update.html
+++ b/app/templates/profile/update.html
@@ -10,5 +10,17 @@
         </div>
     </div>
 
-  
+    <style>
+        body {
+            background-color:gray;
+        }
+    
+        .update {
+            margin-top: 8em;
+            padding: 3%;
+            margin-bottom: 3%;
+            border-radius: 0.5rem;
+            background:black;
+        }
+    </style>
 {% endblock %}
